Navbar fixed for mobile, icon not centered

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -34,7 +34,7 @@
 }
 .navbar-default {
     background-color: @bgDefault;
-    border-color: @bgHighlight;
+    border-color: @bgDefault;
     .navbar-brand {
         color: @colDefault;
         &:hover,
@@ -74,10 +74,10 @@
         }
     }
     .navbar-toggle {
-        border-color: @bgHighlight;
+        border-color: @bgDefault;
         &:hover,
         &:focus {
-            background-color: @bgHighlight;
+            background-color: @bgDefault;
         }
         .icon-bar {
             background-color: @colDefault;
@@ -85,7 +85,7 @@
     }
     .navbar-collapse,
     .navbar-form {
-        border-color: @colDefault;
+        border-color: @bgDefault;
     }
     .navbar-link {
         color: @colDefault;
